@@ -1,6 +1,6 @@
 version 2.5.14
 --------------
-Thanks to Eric for bug feedback in dar-support mailing-list.
+Double thanks to Eric for bug feedback in dar-support mailing-list.
 
 version 2.5.13
 --------------
