@@ -1,7 +1,8 @@
 from 2.5.13 to 2.5.14
 - made libgcrypt built-in memory guard be initialized before obtaining
   ligcrypt version, to respect libgcrypt usage
-- fixed syntax error in XML listing output (EA_entry element)
+- fixed syntax error in XML listing output (EA_entry and Attributes
+  tags)
 
 from 2.5.12 to 2.5.13
 - added -az option to automatically nullify negative dates returned from
